--- a/app/templates/movimento/encontro/registro.html
+++ b/app/templates/movimento/encontro/registro.html
@@ -1,5 +1,5 @@
 <div class="d-flex justify-content-between">
-  <h2 class="fs-4">Cadastro de Equipe</h2>
+  <h2 class="fs-4">Cadastro de Encontro</h2>
   <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
     <ol class="breadcrumb">
       <li class="breadcrumb-item"><a href="#">Home</a></li>
@@ -7,15 +7,20 @@
         <a href="/pages{{ url_for('movimento.index')}}" data-link>Movimentos</a>
       </li>
       <li class="breadcrumb-item active" aria-current="page">
-        Cadastro de Equipes
+        <a
+          href="/pages{{ url_for('movimento.encontro.index', id_movimento=movimento.id) }}"
+          data-link
+          >Encontros</a
+        >
       </li>
+      <li class="breadcrumb-item active" aria-current="page">Novo Encontro</li>
     </ol>
   </nav>
 </div>
 <hr />
 <form
-  action="{% if form.id.data %}{{ url_for('movimento.editar_equipe', id_movimento=id_movimento, id_equipe=form.id.data) }}{% else %}{{ url_for('movimento.nova_equipe', id_movimento=id_movimento) }}{% endif %}"
-  target="/pages{{ url_for('movimento.equipes', id_movimento=id_movimento) }}"
+  action="{% if form.id.data %}{{ url_for('movimento.encontro.editar', id_movimento=movimento.id, id_encontro=form.id.data) }}{% else %}{{ url_for('movimento.encontro.novo', id_movimento=movimento.id) }}{% endif %}"
+  target="/pages{{ url_for('movimento.encontro.index', id_movimento=movimento.id) }}"
   method="post"
   novalidate
 >
@@ -23,7 +28,7 @@
   <input type="hidden" name="id" id="iptId" value="{{ form.id.data }}" />
   {% endif %}
   <div class="row g-3 mb-3">
-    <div class="col-md-12">
+    <div class="col-md-6">
       <label for="iptNome" class="form-label">Nome</label>
       <input
         type="text"
@@ -34,16 +39,49 @@
         autofocus
       />
     </div>
+    <div class="col-md-6">
+      <label for="iptTema" class="form-label">Tema</label>
+      <input
+        type="text"
+        value="{% if form.tema.data %}{{ form.tema.data }}{% endif %}"
+        name="tema"
+        class="form-control"
+        id="iptTema"
+      />
+    </div>
+  </div>
+  <div class="row g-3 mb-3">
+    <div class="col-md-6">
+      <label for="iptAno" class="form-label">Ano</label>
+      <input
+        type="number"
+        value="{% if form.ano.data %}{{ form.ano.data }}{% endif %}"
+        name="ano"
+        class="form-control"
+        id="iptAno"
+      />
+    </div>
+    <div class="col-md-6">
+      <label for="iptDataInicio" class="form-label">Data início</label>
+      <input
+        type="date"
+        value="{% if form.data_inicio.data %}{{ form.data_inicio.data }}{% endif %}"
+        name="data_inicio"
+        class="form-control"
+        id="iptDataInicio"
+      />
+    </div>
   </div>
   <div class="row g-3">
-    <div class="col-md-12">
-      <label for="iptDescricao" class="form-label">Descrição</label>
-      <textarea
-        type="text"
+    <div class="col-md-6">
+      <label for="iptDataTermino" class="form-label">Data término</label>
+      <input
+        type="date"
+        value="{% if form.data_termino.data %}{{ form.data_termino.data }}{% else %}{{ '' }}{% endif %}"
+        name="data_termino"
         class="form-control"
-        id="iptDescricao"
-        name="descricao"
-      >{% if form.descricao.data %}{{ form.descricao.data }}{% endif %}</textarea>
+        id="iptDataTermino"
+      />
     </div>
   </div>
   <hr class="my-4" />
@@ -51,7 +89,7 @@
     <div class="col-6">
       <div class="d-grid gap-2 d-md-flex justify-content-md-start">
         <a
-          href="/pages{{ url_for('movimento.equipes', id_movimento=id_movimento) }}"
+          href="/pages{{ url_for('movimento.encontro.index', id_movimento=movimento.id) }}"
           style="width: 100px"
           class="btn btn-secondary"
           type="button"
@@ -89,9 +127,15 @@
         ],
       },
       {
-        selector: "#iptDescricao",
+        selector: "#iptTema",
         validations: [
-          { handler: isRequired, message: "Por favor informe a descrição" },
+          { handler: isRequired, message: "Por favor informe o tema" },
+        ],
+      },
+      {
+        selector: "#iptAno",
+        validations: [
+          { handler: isRequired, message: "Por favor informe o ano" },
         ],
       },
     ];
@@ -102,8 +146,8 @@
       event.target.classList.add("was-validated");
       const itemId = event.target.querySelector("#iptId");
       const successMsg = itemId
-        ? "Equipe atualizada com sucesso"
-        : "Equipe criada com sucesso";
+        ? "Encontro atualizado com sucesso"
+        : "Encontro criado com sucesso";
 
       if (validateForm(formValidations)) {
         sendFormData(event.target, successMsg);
