--- a/app/templates/movimento/circulo.html
+++ b/app/templates/movimento/circulo.html
@@ -2,18 +2,20 @@
 <hr />
 <nav class="navbar bg-body-tertiary">
   <div class="container-fluid">
-    <a
-      href="/pages{{ url_for('movimento.encontros', _id=id_movimento) }}"
-      class="btn btn-primary"
-      data-link
-      >Voltar</a
-    >
-    <a
-      href="/pages{{ url_for('movimento.novo_circulo', id_movimento=id_movimento, id_encontro=id_encontro) }}"
-      class="btn btn-primary"
-      data-link
-      >+ Novo</a
-    >
+    <div>
+      <a
+        href="/pages{{ url_for('movimento.encontro.index', id_movimento=id_movimento) }}"
+        class="btn btn-outline-primary me-2"
+        data-link
+        ><i class="fa-solid fa-arrow-left"></i
+      ></a>
+      <a
+        href="/pages{{ url_for('movimento.encontro.novo_circulo', id_movimento=id_movimento, id_encontro=id_encontro) }}"
+        class="btn btn-primary"
+        data-link
+        >+ Novo</a
+      >
+    </div>
   </div>
 </nav>
 <div class="d-flex flex-wrap justify-content-evenly">
@@ -26,7 +28,7 @@
       <div class="d-flex justify-content-between">
         <a
           class="btn btn-sm"
-          href="/pages{{ url_for('movimento.editar_circulo', id_movimento=id_movimento, id_encontro=id_encontro, id_circulo=item.id) }}"
+          href="/pages{{ url_for('movimento.encontro.editar_circulo', id_movimento=id_movimento, id_encontro=id_encontro, id_circulo=item.id) }}"
           data-link
         >
           <i class="fas fa-pen"></i>
