--- a/app/templates/movimento/circulo_montagem.html
+++ b/app/templates/movimento/circulo_montagem.html
@@ -20,7 +20,7 @@
 <nav class="navbar bg-body-tertiary mb-3">
   <div class="container-fluid">
     <a
-      href="/pages{{ url_for('movimento.encontros', _id=id_movimento) }}"
+      href="/pages{{ url_for('movimento.encontro.index', id_movimento=id_movimento) }}"
       class="btn btn-outline-primary me-2"
       data-link
       ><i class="fa-solid fa-arrow-left"></i
