Alterações para tela de definição de coordenadores.

--- a/app/templates/components/sidebar.html
+++ b/app/templates/components/sidebar.html
@@ -1,7 +1,9 @@
 <div class="sidebar">
-  <div class="header-box px-3 pt-3 pb-5 mb-4 text-center d-flex justify-content-between">
+  <div
+    class="header-box px-3 pt-3 pb-5 mb-4 text-center d-flex justify-content-between"
+  >
     <h1 class="fs-4 w-100 my-0">Paroquial</h1>
-    <a id="sidebar-menu-button" style="margin: auto; cursor: pointer;">
+    <a id="sidebar-menu-button" style="margin: auto; cursor: pointer">
       <i class="fa-solid fa-bars fa-xl"></i>
     </a>
   </div>
@@ -28,7 +30,7 @@
         href="/pages{{ url_for('movimento.index') }}"
         class="text-decoration-none px-3 py-2 d-block"
         data-link
-        ><i class="fas fa-users fa-lg  mx-2"></i> Movimentos</a
+        ><i class="fas fa-users fa-lg mx-2"></i> Movimentos</a
       >
     </li>
   </ul>
