--- a/app/templates/components/navbar.html
+++ b/app/templates/components/navbar.html
@@ -1,4 +1,4 @@
-<header class="py-3 mb-3 border-bottom" style="background-color: #b5b9bb">
+<header class="py-3 mb-2 border-bottom" style="background-color: #b5b9bb">
   <div
     class="container-fluid d-grid gap-3 align-items-center"
     style="grid-template-columns: 1fr 2fr"
@@ -16,13 +16,6 @@
           data-bs-toggle="dropdown"
           aria-expanded="false"
         >
-          <!-- <img
-            src="https://github.com/mdo.png"
-            alt="mdo"
-            width="32"
-            height="32"
-            class="rounded-circle"
-          /> -->
           {{ current_user.nome }}
         </a>
         <ul class="dropdown-menu">
@@ -37,7 +30,9 @@
             >
           </li>
           <li>
-            <a class="dropdown-item" href="{{ url_for('authentication.logout') }}"
+            <a
+              class="dropdown-item"
+              href="{{ url_for('authentication.logout') }}"
               ><i class="fas fa-sign-out"></i> Sair</a
             >
           </li>
@@ -46,63 +41,3 @@
     </div>
   </div>
 </header>
-<!-- <nav
-  class="navbar navbar-expand-lg"
-  style="background-color: #55585a"
-  data-bs-theme="dark"
->
-  <div class="container-fluid">
-    <a class="navbar-brand menu-button" href="#">
-      <i class="fa-solid fa-bars fa-xl" style="margin: auto;"></i>
-    </a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-bs-toggle="collapse"
-      data-bs-target="#navbarNavDropdown"
-      aria-controls="navbarNavDropdown"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div
-      class="collapse navbar-collapse justify-content-end"
-      id="navbarNavDropdown"
-    >
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a
-            class="nav-link dropdown-toggle"
-            href="#"
-            role="button"
-            data-bs-toggle="dropdown"
-            aria-expanded="false"
-          >
-            {{ current_user.name }}
-          </a>
-          <ul class="dropdown-menu">
-            <li>
-              <a class="dropdown-item" href="#"
-                ><i class="fas fa-id-card"></i> Perfil</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="#"
-                ><i class="fas fa-sliders-h"></i> Configurações</a
-              >
-            </li>
-            <li>
-              <a class="dropdown-item" href="{{ url_for('authentication.logout') }}"
-                ><i class="fas fa-sign-out"></i> Sair</a
-              >
-            </li>
-          </ul>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav> -->
