--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -31,6 +31,9 @@
     <script src="https://cdn.jsdelivr.net/npm/select2@4.1.0-rc.0/dist/js/select2.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.13.2/jquery-ui.min.js"></script>    
     <script
+      src="{{ url_for('static', filename='js/jquery.ba-throttle-debounce.min.js')}}"
+    ></script>
+    <script
       type="module"
       src="{{ url_for('static', filename='js/index.js')}}"
     ></script>
