--- a/app/templates/components/sidebar.html
+++ b/app/templates/components/sidebar.html
@@ -17,6 +17,7 @@
         ><i class="fa fa-user fa-lg mx-2"></i> Usuários</a
       >
     </li>
+    {% if current_user.papel != "ADMIN" %}
     <li class="py-2">
       <a
         href="/pages{{ url_for('casal.index') }}"
@@ -33,5 +34,6 @@
         ><i class="fas fa-users fa-lg mx-2"></i> Movimentos</a
       >
     </li>
+    {% endif %}
   </ul>
 </div>
