--- a/app/templates/usuario/registrar.html
+++ b/app/templates/usuario/registrar.html
@@ -20,24 +20,19 @@
   class="row g-3"
   novalidate
 >
-  {{ form.hidden_tag() }}
-  {% for field in form %}
-    {% if not field.type in ('HiddenField', 'CSRFTokenField') %}
-    {% if field.type == 'BooleanField' %}
-    <div class="col-md-6 m-auto">
-      <div class="form-check form-switch">
-        {{ field(class_="form-check-input") }}
-        {{ field.label(class_="form-check-label") }}
-      </div>
+  {{ form.hidden_tag() }} {% for field in form %} {% if not field.type in
+  ('HiddenField', 'CSRFTokenField') %} {% if field.type == 'BooleanField' %}
+  <div class="col-md-6 m-auto">
+    <div class="form-check form-switch">
+      {{ field(class_="form-check-input") }} {{
+      field.label(class_="form-check-label") }}
     </div>
-    {% else %}
-    <div class="col-md-6">
-      {{ field.label(class_="form-label") }}
-      {{ field(class_="form-control") }}
-    </div>
-    {% endif %}
-    {% endif %}
-  {% endfor %}  
+  </div>
+  {% else %}
+  <div class="col-md-6">
+    {{ field.label(class_="form-label") }} {{ field(class_="form-control") }}
+  </div>
+  {% endif %} {% endif %} {% endfor %}
   <hr class="my-4" />
   <div class="row g-3">
     <div class="col-6">
